; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/extr_loadrom.c_get_region.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/extr_loadrom.c_get_region.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i64* }
%struct.TYPE_4__ = type { i32, i32, i32 }

@system_hw = common dso_local global i32 0, align 4
@SYSTEM_MCD = common dso_local global i32 0, align 4
@REGION_USA = common dso_local global i32 0, align 4
@region_code = common dso_local global i32 0, align 4
@REGION_EUROPE = common dso_local global i32 0, align 4
@REGION_JAPAN_NTSC = common dso_local global i32 0, align 4
@SYSTEM_MD = common dso_local global i32 0, align 4
@rominfo = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@.str = private unnamed_addr constant [4 x i8] c"eur\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"EUR\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"jap\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"JAP\00", align 1
@.str.4 = private unnamed_addr constant [4 x i8] c"usa\00", align 1
@.str.5 = private unnamed_addr constant [4 x i8] c"USA\00", align 1
@REGION_JAPAN_PAL = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [8 x i8] c"T-45033\00", align 1
@.str.7 = private unnamed_addr constant [11 x i8] c"T-69046-50\00", align 1
@.str.8 = private unnamed_addr constant [12 x i8] c"T-120106-00\00", align 1
@.str.9 = private unnamed_addr constant [12 x i8] c"T-70096 -00\00", align 1
@.str.10 = private unnamed_addr constant [8 x i8] c"1011-00\00", align 1
@rom_region = common dso_local global i32 0, align 4
@config = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@vdp_pal = common dso_local global i32 0, align 4
@MCLOCK_PAL = common dso_local global i32 0, align 4
@MCLOCK_NTSC = common dso_local global i32 0, align 4
@system_clock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @get_region(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8, align 1
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %8, label %230

8:                                                ; preds = %1
  %9 = load i32, i32* @system_hw, align 4
  %10 = load i32, i32* @SYSTEM_MCD, align 4
  %11 = icmp eq i32 %9, %10
  br i1 %11, label %12, label %24

12:                                               ; preds = %8
  %13 = load i8*, i8** %2, align 8
  %14 = getelementptr inbounds i8, i8* %13, i64 523
  %15 = load i8, i8* %14, align 1
  %16 = sext i8 %15 to i32
  switch i32 %16, label %21 [
    i32 122, label %17
    i32 100, label %19
  ]

17:                                               ; preds = %12
  %18 = load i32, i32* @REGION_USA, align 4
  store i32 %18, i32* @region_code, align 4
  br label %23

19:                                               ; preds = %12
  %20 = load i32, i32* @REGION_EUROPE, align 4
  store i32 %20, i32* @region_code, align 4
  br label %23

21:                                               ; preds = %12
  %22 = load i32, i32* @REGION_JAPAN_NTSC, align 4
  store i32 %22, i32* @region_code, align 4
  br label %23

23:                                               ; preds = %21, %19, %17
  br label %228

24:                                               ; preds = %8
  %25 = load i32, i32* @system_hw, align 4
  %26 = load i32, i32* @SYSTEM_MD, align 4
  %27 = and i32 %25, %26
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %225

29:                                               ; preds = %24
  store i32 0, i32* %3, align 4
  %30 = load i64*, i64** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @rominfo, i32 0, i32 3), align 8
  %31 = call i32 @memcmp(i64* %30, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 3)
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %36, label %33

33:                                               ; preds = %29
  %34 = load i32, i32* %3, align 4
  %35 = or i32 %34, 8
  store i32 %35, i32* %3, align 4
  br label %164

36:                                               ; preds = %29
  %37 = load i64*, i64** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @rominfo, i32 0, i32 3), align 8
  %38 = call i32 @memcmp(i64* %37, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i32 3)
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %43, label %40

40:                                               ; preds = %36
  %41 = load i32, i32* %3, align 4
  %42 = or i32 %41, 8
  store i32 %42, i32* %3, align 4
  br label %163

43:                                               ; preds = %36
  %44 = load i64*, i64** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @rominfo, i32 0, i32 3), align 8
  %45 = call i32 @memcmp(i64* %44, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i32 3)
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %50, label %47

47:                                               ; preds = %43
  %48 = load i32, i32* %3, align 4
  %49 = or i32 %48, 1
  store i32 %49, i32* %3, align 4
  br label %162

50:                                               ; preds = %43
  %51 = load i64*, i64** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @rominfo, i32 0, i32 3), align 8
  %52 = call i32 @memcmp(i64* %51, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0), i32 3)
  %53 = icmp ne i32 %52, 0
  br i1 %53, label %57, label %54

54:                                               ; preds = %50
  %55 = load i32, i32* %3, align 4
  %56 = or i32 %55, 1
  store i32 %56, i32* %3, align 4
  br label %161

57:                                               ; preds = %50
  %58 = load i64*, i64** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @rominfo, i32 0, i32 3), align 8
  %59 = call i32 @memcmp(i64* %58, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.4, i64 0, i64 0), i32 3)
  %60 = icmp ne i32 %59, 0
  br i1 %60, label %64, label %61

61:                                               ; preds = %57
  %62 = load i32, i32* %3, align 4
  %63 = or i32 %62, 4
  store i32 %63, i32* %3, align 4
  br label %160

64:                                               ; preds = %57
  %65 = load i64*, i64** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @rominfo, i32 0, i32 3), align 8
  %66 = call i32 @memcmp(i64* %65, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.5, i64 0, i64 0), i32 3)
  %67 = icmp ne i32 %66, 0
  br i1 %67, label %71, label %68

68:                                               ; preds = %64
  %69 = load i32, i32* %3, align 4
  %70 = or i32 %69, 4
  store i32 %70, i32* %3, align 4
  br label %159

71:                                               ; preds = %64
  store i32 0, i32* %4, align 4
  br label %72

72:                                               ; preds = %155, %71
  %73 = load i32, i32* %4, align 4
  %74 = icmp slt i32 %73, 4
  br i1 %74, label %75, label %158

75:                                               ; preds = %72
  %76 = load i64*, i64** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @rominfo, i32 0, i32 3), align 8
  %77 = load i32, i32* %4, align 4
  %78 = sext i32 %77 to i64
  %79 = getelementptr inbounds i64, i64* %76, i64 %78
  %80 = load i64, i64* %79, align 8
  %81 = trunc i64 %80 to i32
  %82 = call signext i8 @toupper(i32 %81)
  store i8 %82, i8* %5, align 1
  %83 = load i8, i8* %5, align 1
  %84 = sext i8 %83 to i32
  %85 = icmp eq i32 %84, 85
  br i1 %85, label %86, label %89

86:                                               ; preds = %75
  %87 = load i32, i32* %3, align 4
  %88 = or i32 %87, 4
  store i32 %88, i32* %3, align 4
  br label %154

89:                                               ; preds = %75
  %90 = load i8, i8* %5, align 1
  %91 = sext i8 %90 to i32
  %92 = icmp eq i32 %91, 74
  br i1 %92, label %93, label %96

93:                                               ; preds = %89
  %94 = load i32, i32* %3, align 4
  %95 = or i32 %94, 1
  store i32 %95, i32* %3, align 4
  br label %153

96:                                               ; preds = %89
  %97 = load i8, i8* %5, align 1
  %98 = sext i8 %97 to i32
  %99 = icmp eq i32 %98, 69
  br i1 %99, label %100, label %103

100:                                              ; preds = %96
  %101 = load i32, i32* %3, align 4
  %102 = or i32 %101, 8
  store i32 %102, i32* %3, align 4
  br label %152

103:                                              ; preds = %96
  %104 = load i8, i8* %5, align 1
  %105 = sext i8 %104 to i32
  %106 = icmp eq i32 %105, 75
  br i1 %106, label %107, label %110

107:                                              ; preds = %103
  %108 = load i32, i32* %3, align 4
  %109 = or i32 %108, 1
  store i32 %109, i32* %3, align 4
  br label %151

110:                                              ; preds = %103
  %111 = load i8, i8* %5, align 1
  %112 = sext i8 %111 to i32
  %113 = icmp slt i32 %112, 16
  br i1 %113, label %114, label %119

114:                                              ; preds = %110
  %115 = load i8, i8* %5, align 1
  %116 = sext i8 %115 to i32
  %117 = load i32, i32* %3, align 4
  %118 = or i32 %117, %116
  store i32 %118, i32* %3, align 4
  br label %150

119:                                              ; preds = %110
  %120 = load i8, i8* %5, align 1
  %121 = sext i8 %120 to i32
  %122 = icmp sge i32 %121, 48
  br i1 %122, label %123, label %133

123:                                              ; preds = %119
  %124 = load i8, i8* %5, align 1
  %125 = sext i8 %124 to i32
  %126 = icmp sle i32 %125, 57
  br i1 %126, label %127, label %133

127:                                              ; preds = %123
  %128 = load i8, i8* %5, align 1
  %129 = sext i8 %128 to i32
  %130 = sub nsw i32 %129, 48
  %131 = load i32, i32* %3, align 4
  %132 = or i32 %131, %130
  store i32 %132, i32* %3, align 4
  br label %149

133:                                              ; preds = %123, %119
  %134 = load i8, i8* %5, align 1
  %135 = sext i8 %134 to i32
  %136 = icmp sge i32 %135, 65
  br i1 %136, label %137, label %148

137:                                              ; preds = %133
  %138 = load i8, i8* %5, align 1
  %139 = sext i8 %138 to i32
  %140 = icmp sle i32 %139, 70
  br i1 %140, label %141, label %148

141:                                              ; preds = %137
  %142 = load i8, i8* %5, align 1
  %143 = sext i8 %142 to i32
  %144 = sub nsw i32 %143, 65
  %145 = add nsw i32 %144, 10
  %146 = load i32, i32* %3, align 4
  %147 = or i32 %146, %145
  store i32 %147, i32* %3, align 4
  br label %148

148:                                              ; preds = %141, %137, %133
  br label %149

149:                                              ; preds = %148, %127
  br label %150

150:                                              ; preds = %149, %114
  br label %151

151:                                              ; preds = %150, %107
  br label %152

152:                                              ; preds = %151, %100
  br label %153

153:                                              ; preds = %152, %93
  br label %154

154:                                              ; preds = %153, %86
  br label %155

155:                                              ; preds = %154
  %156 = load i32, i32* %4, align 4
  %157 = add nsw i32 %156, 1
  store i32 %157, i32* %4, align 4
  br label %72

158:                                              ; preds = %72
  br label %159

159:                                              ; preds = %158, %68
  br label %160

160:                                              ; preds = %159, %61
  br label %161

161:                                              ; preds = %160, %54
  br label %162

162:                                              ; preds = %161, %47
  br label %163

163:                                              ; preds = %162, %40
  br label %164

164:                                              ; preds = %163, %33
  %165 = load i32, i32* %3, align 4
  %166 = and i32 %165, 4
  %167 = icmp ne i32 %166, 0
  br i1 %167, label %168, label %170

168:                                              ; preds = %164
  %169 = load i32, i32* @REGION_USA, align 4
  store i32 %169, i32* @region_code, align 4
  br label %193

170:                                              ; preds = %164
  %171 = load i32, i32* %3, align 4
  %172 = and i32 %171, 1
  %173 = icmp ne i32 %172, 0
  br i1 %173, label %174, label %176

174:                                              ; preds = %170
  %175 = load i32, i32* @REGION_JAPAN_NTSC, align 4
  store i32 %175, i32* @region_code, align 4
  br label %192

176:                                              ; preds = %170
  %177 = load i32, i32* %3, align 4
  %178 = and i32 %177, 8
  %179 = icmp ne i32 %178, 0
  br i1 %179, label %180, label %182

180:                                              ; preds = %176
  %181 = load i32, i32* @REGION_EUROPE, align 4
  store i32 %181, i32* @region_code, align 4
  br label %191

182:                                              ; preds = %176
  %183 = load i32, i32* %3, align 4
  %184 = and i32 %183, 2
  %185 = icmp ne i32 %184, 0
  br i1 %185, label %186, label %188

186:                                              ; preds = %182
  %187 = load i32, i32* @REGION_JAPAN_PAL, align 4
  store i32 %187, i32* @region_code, align 4
  br label %190

188:                                              ; preds = %182
  %189 = load i32, i32* @REGION_USA, align 4
  store i32 %189, i32* @region_code, align 4
  br label %190

190:                                              ; preds = %188, %186
  br label %191

191:                                              ; preds = %190, %180
  br label %192

192:                                              ; preds = %191, %174
  br label %193

193:                                              ; preds = %192, %168
  %194 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @rominfo, i32 0, i32 2), align 8
  %195 = call i32* @strstr(i32 %194, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.6, i64 0, i64 0))
  %196 = icmp ne i32* %195, null
  br i1 %196, label %197, label %200

197:                                              ; preds = %193
  %198 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @rominfo, i32 0, i32 0), align 8
  %199 = icmp eq i32 %198, 3969
  br i1 %199, label %212, label %200

200:                                              ; preds = %197, %193
  %201 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @rominfo, i32 0, i32 2), align 8
  %202 = call i32* @strstr(i32 %201, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.7, i64 0, i64 0))
  %203 = icmp ne i32* %202, null
  br i1 %203, label %212, label %204

204:                                              ; preds = %200
  %205 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @rominfo, i32 0, i32 2), align 8
  %206 = call i32* @strstr(i32 %205, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.8, i64 0, i64 0))
  %207 = icmp ne i32* %206, null
  br i1 %207, label %212, label %208

208:                                              ; preds = %204
  %209 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @rominfo, i32 0, i32 2), align 8
  %210 = call i32* @strstr(i32 %209, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.9, i64 0, i64 0))
  %211 = icmp ne i32* %210, null
  br i1 %211, label %212, label %214

212:                                              ; preds = %208, %204, %200, %197
  %213 = load i32, i32* @REGION_EUROPE, align 4
  store i32 %213, i32* @region_code, align 4
  br label %224

214:                                              ; preds = %208
  %215 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @rominfo, i32 0, i32 1), align 4
  %216 = icmp eq i32 %215, 21294
  br i1 %216, label %217, label %223

217:                                              ; preds = %214
  %218 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @rominfo, i32 0, i32 2), align 8
  %219 = call i32* @strstr(i32 %218, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.10, i64 0, i64 0))
  %220 = icmp ne i32* %219, null
  br i1 %220, label %221, label %223

221:                                              ; preds = %217
  %222 = load i32, i32* @REGION_JAPAN_NTSC, align 4
  store i32 %222, i32* @region_code, align 4
  br label %223

223:                                              ; preds = %221, %217, %214
  br label %224

224:                                              ; preds = %223, %212
  br label %227

225:                                              ; preds = %24
  %226 = call i32 (...) @sms_cart_region_detect()
  store i32 %226, i32* @region_code, align 4
  br label %227

227:                                              ; preds = %225, %224
  br label %228

228:                                              ; preds = %227, %23
  %229 = load i32, i32* @region_code, align 4
  store i32 %229, i32* @rom_region, align 4
  br label %232

230:                                              ; preds = %1
  %231 = load i32, i32* @rom_region, align 4
  store i32 %231, i32* @region_code, align 4
  br label %232

232:                                              ; preds = %230, %228
  %233 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @config, i32 0, i32 0), align 4
  %234 = icmp eq i32 %233, 1
  br i1 %234, label %235, label %237

235:                                              ; preds = %232
  %236 = load i32, i32* @REGION_USA, align 4
  store i32 %236, i32* @region_code, align 4
  br label %255

237:                                              ; preds = %232
  %238 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @config, i32 0, i32 0), align 4
  %239 = icmp eq i32 %238, 2
  br i1 %239, label %240, label %242

240:                                              ; preds = %237
  %241 = load i32, i32* @REGION_EUROPE, align 4
  store i32 %241, i32* @region_code, align 4
  br label %254

242:                                              ; preds = %237
  %243 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @config, i32 0, i32 0), align 4
  %244 = icmp eq i32 %243, 3
  br i1 %244, label %245, label %247

245:                                              ; preds = %242
  %246 = load i32, i32* @REGION_JAPAN_NTSC, align 4
  store i32 %246, i32* @region_code, align 4
  br label %253

247:                                              ; preds = %242
  %248 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @config, i32 0, i32 0), align 4
  %249 = icmp eq i32 %248, 4
  br i1 %249, label %250, label %252

250:                                              ; preds = %247
  %251 = load i32, i32* @REGION_JAPAN_PAL, align 4
  store i32 %251, i32* @region_code, align 4
  br label %252

252:                                              ; preds = %250, %247
  br label %253

253:                                              ; preds = %252, %245
  br label %254

254:                                              ; preds = %253, %240
  br label %255

255:                                              ; preds = %254, %235
  %256 = load i32, i32* @region_code, align 4
  %257 = ashr i32 %256, 6
  %258 = and i32 %257, 1
  store i32 %258, i32* @vdp_pal, align 4
  %259 = load i32, i32* @vdp_pal, align 4
  %260 = icmp ne i32 %259, 0
  br i1 %260, label %261, label %263

261:                                              ; preds = %255
  %262 = load i32, i32* @MCLOCK_PAL, align 4
  br label %265

263:                                              ; preds = %255
  %264 = load i32, i32* @MCLOCK_NTSC, align 4
  br label %265

265:                                              ; preds = %263, %261
  %266 = phi i32 [ %262, %261 ], [ %264, %263 ]
  store i32 %266, i32* @system_clock, align 4
  %267 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @config, i32 0, i32 1), align 4
  %268 = icmp eq i32 %267, 1
  br i1 %268, label %269, label %270

269:                                              ; preds = %265
  store i32 0, i32* @vdp_pal, align 4
  br label %275

270:                                              ; preds = %265
  %271 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @config, i32 0, i32 1), align 4
  %272 = icmp eq i32 %271, 2
  br i1 %272, label %273, label %274

273:                                              ; preds = %270
  store i32 1, i32* @vdp_pal, align 4
  br label %274

274:                                              ; preds = %273, %270
  br label %275

275:                                              ; preds = %274, %269
  %276 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @config, i32 0, i32 2), align 4
  %277 = icmp eq i32 %276, 1
  br i1 %277, label %278, label %280

278:                                              ; preds = %275
  %279 = load i32, i32* @MCLOCK_NTSC, align 4
  store i32 %279, i32* @system_clock, align 4
  br label %286

280:                                              ; preds = %275
  %281 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @config, i32 0, i32 2), align 4
  %282 = icmp eq i32 %281, 2
  br i1 %282, label %283, label %285

283:                                              ; preds = %280
  %284 = load i32, i32* @MCLOCK_PAL, align 4
  store i32 %284, i32* @system_clock, align 4
  br label %285

285:                                              ; preds = %283, %280
  br label %286

286:                                              ; preds = %285, %278
  ret void
}

declare dso_local i32 @memcmp(i64*, i8*, i32) #1

declare dso_local signext i8 @toupper(i32) #1

declare dso_local i32* @strstr(i32, i8*) #1

declare dso_local i32 @sms_cart_region_detect(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
